--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings":{
+    "Token": "super secret key"
+  },
   "ConnectionStrings":{
     "DefaultConnection":"Data Source=localhost;Initial Catalog=DatingApp; User Id=sa; password=COM214me_nts;MultipleActiveResultSets=true"
   },
